--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header nav ul li a:hover {
 }
 
 .banner {
-    background-image: url('merchant.png');
+    background-image: url('dcy.jpg');
     background-size: cover;
     background-position: center;
     color: #fff;
