--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ header nav ul li a:hover {
 
 .banner {
     background-image: url('dcy.jpg');
-    background-size: cover;
+    background-size: auto;
     background-position: center;
 }
 
