--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,12 @@ header nav ul li a:hover {
 }
 
 .banner {
-    background-image: url('dcy.jpg');
+    background-image: url('merchant.png');
     background-size: cover;
     background-position: center;
+    color: #fff;
+    padding: 30px 0;
+    text-align: center;
 }
 
 .banner-text p {
