--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header nav ul li a:hover {
     background-size: cover;
     background-position: center;
     color: #fff;
-    padding: 30px 0;
+    padding: 50px 50px;
     text-align: center;
 }
 
