--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ header nav ul li a:hover {
     background-position: center;
     color: #fff;
     padding: 0px 0px;
+    margin: 0px 0px;
     text-align: center;
 }
 
