--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #a9a9a9;
+    background-color: #353839;
     color: #fff;
     padding: 5px 0;
     text-align: center;
@@ -139,7 +139,7 @@ li {
 }
 
 button {
-    background-color: #a9a9a9;
+    background-color: #353839;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -181,7 +181,7 @@ form input, form textarea {
 form button {
     margin-top: 20px;
     padding: 12px 24px;
-    background-color: #a9a9a9;
+    background-color: #353839;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -193,7 +193,7 @@ form button:hover {
 }
 
 footer {
-    background-color: #a9a9a9;
+    background-color: #353839;
     color: #fff;
     padding: 20px 0;
     text-align: center;
