--- a/styles.css
+++ b/styles.css
@@ -70,10 +70,6 @@ header nav ul li a:hover {
 .section {
     padding: 40px 20px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid;
-}
 }
 
 h2 {
@@ -134,6 +130,12 @@ li {
 
 .submit-btn:hover {
     background-color: #ffcc00; 
+}
+
+.feedback {
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid;
 }
 
 button {
