--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,8 @@ li {
 }
 
 .feedback {
+    padding: 40px 20px;
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid;
