--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,11 @@ header nav ul li a:hover {
     text-align: center;
 }
 
+.banner-text h2 {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+}
+
 .banner-text p {
     font-size: 1.2em;
     margin-top: 20px;
