--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ header nav ul li a:hover {
 }
 
 .banner {
-    background-image: url('blue.png');
+    background-image: url('semi_black.png');
     background-size: cover;
     background-position: center;
     color: #fff;
