--- a/styles.css
+++ b/styles.css
@@ -163,6 +163,24 @@ footer {
     margin-top: 40px;
 }
 
+#loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #080808;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease;
+}
+
+#loader.hide {
+    opacity: 0;
+}
+
 .spinner {
     width: 50px;
     height: 50px;
